--- a/src/contact/contact.css
+++ b/src/contact/contact.css
@@ -3,6 +3,7 @@
     flex: wrap;
     text-align: left;
     margin-right:100px;
+    
   
    
     
@@ -28,7 +29,8 @@
     display: flex;
     flex: wrap;
     margin-left: 100px;
-    background-color:lightslategrey;
+    background-color:rgb(68, 60, 104);
+    color:white;
     width:300px;
     height:auto;
     border-radius: 20px;
@@ -36,6 +38,18 @@
     box-shadow: 10px 10px 5px lightblue;
     
 }   
+
+.basic ul li p{
+    color: black;
+}
+
+.advance ul li p{
+    color: black;
+}
+
+.updation ul li p{
+    color: black;
+}
     
     
 
@@ -45,7 +59,8 @@
     flex: wrap; 
     margin : center;
     margin-left: 100px;
-    background-color:lightslategrey;
+    background-color:rgb(68, 60, 104);
+    color:white;
     width:300px;
     height:auto;
     padding:3%;
@@ -60,7 +75,8 @@
     display: flex;
     flex: wrap; 
     margin-left: 100px;
-    background-color:lightslategrey;
+    background-color:rgb(68, 60, 104);
+    color:white;
     width:300px;
     height:auto;
     border-radius: 20px;
