--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,9 +1,24 @@
 .colour{
-    background-color: aqua;
+    background-color: #18122B;
     padding: 7%;
+    color: whitesmoke;
+    text-align: left;
+    border-radius: 50px;
 }
 
 ul {
     list-style-type: none;
 } 
 
+a{
+    text-decoration: none;
+}
+
+.style6 {
+	background-color: #fff;
+	border-top: 2px dotted #8c8b8b;
+}
+
+.aaduven{
+    color: white;
+}
